<resources>
    <string name="app_name">CnG</string>
    <string name="loading" >Loading</string>
    <string name="menu_download" >Download</string>
    <string name="menu_all" >Total</string>
    <string name="banner_ad_unit_id_choice">ca-app-pub-5272695963972081/8136058254</string>
    <string name="double_click">Double Click</string>
    <string name="move_to_up">Swipe Up</string>
    <string name="move_to_down">Swipe Down</string>
    <string name="move_to_left">Swipe Left</string>
    <string name="move_to_right">Swipe Right</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="setting_shortcut_key">Setting Shortcut Keys</string>
    <string name="setting_icons">Setting Icons</string>
    <string name="setting_location">Setting Location</string>
    <string name="setting_size">Setting Size</string>
    <string name="setting_language">Setting Language</string>
    <string name="reset_all_setting">Reset</string>
    <string name="apply">Apply</string>
    <string name="add_bookmark">Add Bookmarks</string>
    <string name="setting">Settings</string>
    <string name="exit">Exit</string>
    <string name="Set_your_location_with_flag">Set your location with flag</string>
    <string name="cancel">Cancel</string>
    <string name="link_with_gesture">Link with gesture</string>
    <string name="calling">Call</string>
    <string name="launch_app">Run app</string>
    <string name="launch_web_browser">Run web browser</string>

    <!--Tips 스트링-->
    <string name="tips_setting_key">Setting actions to link</string>
    <string name="tips_setting_icons">Changing icon images</string>
    <string name="tips_setting_location">Setting icon location</string>
    <string name="tips_setting_size">Setting icon size</string>
    <string name="tips_setting_language">Setting a language to use</string>
    <string name="tips_reset_all_settings">Reset all settings</string>

    <string name="select_one_of_list">Select one of list</string>

    <!--keySetting tips-->
    <string name="keysetting_tips_1">Please touch</string>
    <string name="keysetting_tips_1_1"> on the list</string>
    <string name="keysetting_tips_2">Select an action you want to link</string>
    <string name="keysetting_tips_3"> can delete selected actions</string>

    <string name="this_address">This url</string>
    <string name="deleted_from_list">delete</string>
    <string name="was_deleted"> was deleted</string>
    <string name="was_added"> was added</string>
    <string name="add">add</string>

    <string name="already_running">This app is already running</string>

    <string name="info">Information</string>
    <string name="notice">Notice</string>
    <string name="please_use_default_gallery">Please use default Gallery App use</string>
    <string name="do_you_want_to_reset">Do you want reset all settings?</string>
    <string name="internet_connection">Connecting to Internet</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="close">close</string>
    <string name="url_address_is_wrong">Url address is wrong</string>

    <string name="is_run">will be run</string>
    <string name="will_be_opened">will be open</string>

</resources>
