<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Setting"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Tips"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:padding="13dp"
            android:background="@drawable/border_curve"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_keyy_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/setting_shortcut_key"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_setting_key"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_image_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/setting_icons"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_setting_icons"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_location_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/setting_location"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_setting_location"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_size_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/setting_size"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_setting_size"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_language_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/setting_language"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_setting_language"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/i_reset_white"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/reset_all_setting"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/tips_reset_all_settings"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:gravity="right"
            android:text="@string/do_not_show_again"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/setting_check_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>